# Scheduling-assistant-developed-for-Siemens-Gamesa

./: .gitignore  CMakeLists.txt  README.md  build_debug  main.c  test_debug  timeConverter.c
includes/: criteria.c  criteria.h  error.c  error.h  generate.c  generate.h  input.c  input.h  outputTable.c  outputtable.h  types.c  types.h  util.c  util.h  weight_day.c  weight_day.h  xmlWriter.c  xmlWriter.h
p1/: readWeekDays.c
resources/: footer  header
tests/: type-tests.c  weight_day_test.h
